fix: fix the header position attribute in order to make it always visible

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap");
-/* @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"); */
 
 * {
   margin: 0;
@@ -30,7 +29,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 16px;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 10;
 }
